buildscript {
    ext {
        springBootVersion = '2.4.2'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath("io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE")
    }
}

ext {
    springCloudVersion = '2020.0.0'
    lombokVersion = '1.18.12'
    jinqVersion = '1.8.32'
    commonCollectionVersion = '4.4'
    mysqlConnectorVersion = '8.0.22'
    commonsIOVersion = '2.8.0'
    javaServletVersion = '4.0.1'
    jacocoVersion = '0.8.1'
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: "io.spring.dependency-management"


jar {
    archivesBaseName = 'paas-ta-portal-common-api'
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

dependencies {
    compile ('org.springframework.boot:spring-boot-starter-web')

    //Server Security
    compile ('org.springframework.boot:spring-boot-starter-security')

    // spring-boot-configuration-processor
    compile ('org.springframework.boot:spring-boot-configuration-processor')
    annotationProcessor ('org.springframework.boot:spring-boot-configuration-processor')

    //Eureka
    compile ('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')

    //lombok(add getter/setter)
    compile("org.projectlombok:lombok")
    annotationProcessor("org.projectlombok:lombok")

    //JPA
    compile('org.springframework.boot:spring-boot-starter-data-jpa')
    compile("org.jinq:jinq-jpa:${jinqVersion}")


    compile("org.apache.commons:commons-collections4:${commonCollectionVersion}")
    compile('org.springframework:spring-context-support')
    compile('javax.mail:javax.mail-api')
    compile('javax.xml.bind:jaxb-api:2.3.1')
    compile('javax.mail:mail:1.4.7')
    compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'


    //DB
    compile ('org.springframework.boot:spring-boot-starter-jdbc')
    //compile ('commons-dbcp:commons-dbcp:1.4')
    compile ("mysql:mysql-connector-java:${mysqlConnectorVersion}")
    compile ("javax.servlet:javax.servlet-api:${javaServletVersion}")
    compile ('org.postgresql:postgresql')
    compile ('org.hamcrest:hamcrest-all:1.3')
    compile ('com.googlecode.json-simple:json-simple:1.1.1')

    //FILE
    compile("commons-io:commons-io:${commonsIOVersion}")

    testCompile('org.springframework.boot:spring-boot-starter-test')
    testCompile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
    testCompile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'


}


apply plugin: 'jacoco'

jacoco {
    toolVersion = "${jacocoVersion}"
}

test {
    ignoreFailures=true
    jacoco {
        destinationFile = file("$buildDir/jacoco/jacoco-overall.exec")
    }
}

